app/assets/stylesheets/global/chesnutt.scss
/* ... */
hr {
  &.horBar {
    border-top: 3px solid $dark;
    width: 50%;
  }
}

blockquote {
  border: none;
  font-size: 1em;
  margin-left: 3em;
  padding: 0;

  p {
    font-size: .9em;
    line-height: 1.4em
  }
}

strong {
  font-weight: bold;
}

// ================
// Header and Footer
// ================

#header, #footer {
  background-color: $brand-info;
  color: $white;
  text-align: center;

  a {
    color: $white;
  }
}

// Browse and Search links on upper right when screen is larger
ul.searchlinks {
  display: block;
  font-family: $font-family-sans-serif;
  list-style-type: none;
  margin-top: 10px;

  li {
    display: inline;
    margin-right: 20px;
  }
}

@media (min-width: $screen-md-min) {
  ul.searchlinks {
    position: absolute;
    right: 0;
    top: 0;

    li {
      margin-right: 20px;
    }
  }
}

// Header
// see bottom of header for mobile font sizes

#header {
  height: auto;

  .site-title-container {
    width: 100%;
  }

  .site-title {
    border-bottom: 3px double $gold-metallic;
    display: inline-block;
    font-family: $font-family-display;
    margin-top: .1em;
    padding-top: .4em;

    .title_the, .title_archive  {
      font-size: .7em;
    }

    .title_cwc {
      font-family: $font-family-smallcaps;
      letter-spacing: .1em;
      margin: 0 .1em 0 .3em;
      word-spacing: -.1em;
    }
  }

  //navbar 

  $subnav: $cultured;

  .navbar-default, .navbar {
     border: none;
     margin-bottom: 0;
  }

  .navbar-nav {
    display: flex;
    flex-wrap: wrap;
    font-family: $font-family-sans-serif;
    font-size: 1.1em;
    justify-content: center;
    width: 100%;
  }

  // mainnav

  .navbar_mainnav {
    background-color: $brand-info;
    border-bottom: 3px solid $subnav;

    a {
      color: $white;
    }
  }

  .navbar-default.navbar_mainnav .navbar-nav > .active > a, 
  .navbar-default.navbar_mainnav .navbar-nav > .active {
    background-color: $subnav;
    color: $brand-primary;
  }

  // subnav

  .navbar-default.navbar_subnav .navbar-nav > .active > a, 
  .navbar-default.navbar_msubnav .navbar-nav > .active {
    background-color: $white;
  }

  .navbar_subnav.navbar {
    color: $dark;
    font-size: .8em;
    height: auto;
    min-height: 25px;

    a {
      color: $dark;
      padding: 2px 10px 5px 10px;

      &.active {
        background-color: $gold-metallic;
      }
    }
  }

  .navbar-default.navbar_subnav {
    background-color: $subnav;
  }

} // end header 

@media (max-width: $screen-xs-max) {
  #header {
    .site-title-container {
      .h1 {
        font-size: 6vw;
      }
    }
    .navbar-nav {
      font-size: .9em;
    }
  }
}

// Footer

#footer {
  font-family: $font-family-sans-serif;
  margin-bottom: 0;
  padding-bottom: 8em;
  padding-top: 1.5em;

  .footer_bluesky {
    margin-top: 2.5em
  }

  .footer_content_warning {
    font-size: .7em;
  }

  .footer_info {
    align-items: center;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

      .footer_logo {
        align-items: center;
        background-color: rgba(255, 255, 255, 0.07);
        margin: 1em;
        padding: 20px;

        // Make CDRH link 2 lines
        .cdrh_link {
          max-width: 32rem;
        }

      p {
        font-size: 1.4em;
        margin: 0;
        padding: 0;

        a {
          color: #fff;
        }
      }

      img {
        max-width: 100%;
      }
    }
  }

  a {
    color: $gold-metallic;
  }
}

.footer_additional_info {
  font-size: 1.4em;
  margin-top: 2em;
}

// Stick footer to bottom

#body-wrapper {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

#content-wrapper {
  flex-grow: 1;
  padding-bottom: 0;
}

// ================
// Item listing, top level pages
// ================

// Secondary page listing (see about the site main page)

.page_subnav {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;

  li {
    flex-grow: 1;
    list-style: none;
    min-width: 50%;
    text-align: center;

    a {
      border: 2px solid $brand-success;
      display: block;
      font-family: $font-family-sans-serif;
      margin: 10px;
      min-height: 100px;
      padding: 10px;

      &:hover {
        border: 2px solid $dark-purple;

        span {
          background-color:rgba(255, 255, 255, 1);
          text-decoration-color: $brand-success;
          text-decoration-thickness: 3px;
        }
      }
      
      span {
        background-color: rgba(255, 255, 255, 0.8);
        color: $link-color !important;
        display: inline-block;
        text-decoration: underline;
        font-size: 1.3em;
        padding: .1em .4em;
      }
    }
  }

  // repeating backgrounds

  li:nth-child(4n + 1) {
    a {
      background-image: image-url("marble_01.jpg");
    }
  }

  li:nth-child(4n + 2) {
    a {
      background-image: image-url("marble_02.jpg");
    }
  }

  li:nth-child(4n + 3) {
    a {
      background-image: image-url("marble_03.jpg");
    }
  }

  li:nth-child(4n + 4) {
    a {
      background-image: image-url("marble_04.jpg");
    }
  }

  li:nth-child(5n + 5) {
    a {
      background-image: image-url("marble_05.jpg");
    }
  }

  li:nth-child(6n + 6) {
    a {
      background-image: image-url("marble_06.jpg");
    }
  }

  li:nth-child(7n + 7) {
    a {
      background-image: image-url("marble_07.jpg");
    }
  }
}

// =======================
// Page decorative banners
// =======================

// Horizontal Banners

// Settings for all horizontal illustrations

// if screen > sm, place text over image
@media (min-width: $screen-sm) {
  .page_banner_outer {
    position: relative;
    z-index: 1;
  }

  .page_banner_illustration {
    position: absolute;
    top: 0;
    left: 0;
  }
}

// Style semi transparent background for page text 
.page_banner_text {
  background-color: rgba(255, 255, 255, 0.8);
  padding: 20px 20px 10px 20px;
  position: relative;
  z-index: 4;

  h1 {
    margin: 0;
    padding: 0;
    font-size: 1.8em;
  }
}
/* ... */

